--- a/index.html
+++ b/index.html
@@ -91,8 +91,7 @@
     <div id="shinkansen-modal" class="modal">
     <div class="modal-content">
         <span class="close">&times;</span>
-        <h2>新幹線チケットのお得情報！</h2>
-        <p>今なら当サイトで新幹線のチケットを購入すると、<strong>特別割引</strong>が受けられます。お見逃しなく！</p>
+        <img src="./assets/images/modal_img.jpg" width="100%" />
       </div>
     </div>
     <!-- 
